kube-config/homework/conv-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: conv-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: conv-api
  template:
    metadata:
      labels:
        app: conv-api
    spec:
      containers:
      - name: conv-api
        image: antonlarichev/short-api:v.0
        imagePullPolicy: Always
        resources:
          limits:
            memory: "500i"
            cpu: "200m"
        ports:
        - containerPort: 80
        volumeMounts:
          - name: conv-api-image-pvc
            mountPath: /opt/app/uploads
            subPath: env
      volumes:
        - name: conv-api-image-pvc
          persistentVolumeClaim:
            claimName: conv-api-image-pvc
