kube-config/homework/conv-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: conv-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: conv-app
  template:
    metadata:
      labels:
        app: conv-app
    spec:
      containers:
      - name: conv-app
        image: antonlarichev/short-app:v1.4
        imagePullPolicy: Always
        resources:
          limits:
            memory: "128Mi"
            cpu: "150m"
        ports:
        - containerPort: 80
