kube-config/homework/converter-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: converter
spec:
  replicas: 2
  selector:
    matchLabels:
      app: converter
  template:
    metadata:
      labels:
        app: converter
    spec:
      containers:
      - name: converter
        image: antonlarichev/converter:v1.0
        imagePullPolicy: Always
        resources:
          limits:
            memory: "500Mi"
            cpu: "200m"
        ports:
        - containerPort: 80
