kube-config/homework/rabbitmq-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
      - name: rabbitmq
        image: rabbitmq:4.0-management
        imagePullPolicy: Always
        resources:
          limits:
            memory: "300Mi"
            cpu: "300m"
        volumeMounts:
          - name: rabbitmq-data
            mountPath: /var/lib/rabbitmq
            subPath: rabbitmq
        ports:
        - containerPort: 5672
      volumes:
        - name: rabbitmq-data
          persistentVolumeClaim:
            claimName: rabbitmq-pvc
