kube-config/homework/conv-api-service.yml
apiVersion: v1
kind: Service
metadata:
  name: conv-api-clusterip
spec:
  type: ClusterIP
  selector:
    app: conv-api
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
