kube-config/homework/conv-app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: conv-app-clasterip
spec:
  type: ClusterIP
  selector:
    app: conv-app
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
