kube-config/homework/converter-service.yml
apiVersion: v1
kind: Service
metadata:
  name: converter-clusterip
spec:
  type: ClusterIP
  selector:
    app: converter
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
