kube-config/homework/rabbitmq-service.yml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-clasterip
spec:
  type: ClusterIP
  selector:
    app: rabbitmq
  ports:
  - port: 15672
    targetPort: 80
    protocol: TCP
